# Balloon

./: README.md  zlib.sln
zlib/: CMakeLists.txt  WorkingFunctions.txt  balloon.cpp  balloon.debug.cpp  balloon.hpp  baloon.cpp  legacy.txt  main.cpp  zlib.vcxproj  zlib.vcxproj.filters
zlib/src/: infostuff.txt  mstring.hpp  oldcodethatimightregretdeleting.cpp  schrodenger.cpp
zlib/zlib/: compress.c  crc32.c  deflate.c  gzclose.c  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inflate.c  inftrees.c  trees.c  uncompr.c  zbuild.lib  zutil.c
